--- a/Sistema de Cadastro e Login de Usuários/src/gui/TelaCadastro.form
+++ b/Sistema de Cadastro e Login de Usuários/src/gui/TelaCadastro.form
@@ -130,7 +130,7 @@
         <Component class="javax.swing.JTextField" name="txtEmail">
           <Properties>
             <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
-              <Color id="Cursor de Texto"/>
+              <Color id="Default Cursor"/>
             </Property>
           </Properties>
         </Component>
